--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ li:nth-child(3) {
     margin-top: 5%;
 }
 .equipe {
-    width: 50%;
+    width: 49%;
     height: 300px;
     margin-left: 15%;
 }
@@ -71,4 +71,31 @@ li:nth-child(3) {
     margin-top: 30px;
     letter-spacing: 1px;
     line-height: 40px;
+}
+.pictures-container {
+    width: 95%;
+    height: 600px;
+    background-color: #FFFFFF;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-left: 5%;
+    margin-top: 5%;
+}
+.container-wrapper {
+    width: 30%;
+    height: 100px;
+}  
+.container-wrapper img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin-left: 100px;
+    margin-top: 50px;
+}
+.container-wrapper h4,p {
+    font-size: 13px;
+    margin-top: 15px;
+    text-align: center;
+    letter-spacing: 1px;
 }
