--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ li:nth-child(3) {
     line-height: 40px;
 }
 .pictures-container {
-    width: 95%;
+    width: 90%;
     height: 600px;
     background-color: #FFFFFF;
     display: flex;
@@ -98,4 +98,87 @@ li:nth-child(3) {
     margin-top: 15px;
     text-align: center;
     letter-spacing: 1px;
+    line-height: 25px;
+}
+.second-container {
+    margin-top: 50px;
+    width: 100%;
+    height: 600px;
+}
+.second-block-wrapper {
+    display: flex;
+    width: 50%;
+    margin-left: 15%;
+    flex-direction: column;
+}
+.second-block-wrapper h3 {
+    letter-spacing: 2px;
+}
+.second-block-wrapper p {
+    margin-top: 50px;
+    font-size: 17px;
+    text-align: left;
+}
+.blue-block-wrapper {
+    width: 100%;
+    margin-top: 70px;
+    display: flex;
+    justify-content: space-evenly;
+}
+.blue-block {
+    width: 25%;
+    background-color:#0865DE;
+    height: 150px;
+    border-radius: 3px;
+}
+.blue-block h5 {
+    color: white;
+    letter-spacing:1.4px;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+.blue-block p {
+    color: black;
+    margin-left: 20px;
+    text-align: left;
+}
+.icon-h6-wrapper {
+    display: flex;
+}
+.icon-div {
+    width: 30px;
+    height: 30px;
+    background-color: white;
+    border-radius: 50%;
+    margin-top: 30px;
+    margin-left: 20px;
+}
+.icon-div img {
+    margin-left: 5px;
+    width: 15px;
+    height: 15px;
+    margin-top: 5px;
+}
+.icon-h6-wrapper h6 {
+    margin-top: 40px;
+    margin-left: 10px;
+    color: white;
+    letter-spacing: 1.4px;
+}
+.second-block-wrapper-2 {
+    display: flex;
+    width: 35%;
+    height: 300px;
+    margin-top: 100px;
+    flex-direction: column;
+    margin-left: 48%;
+}
+.second-block-wrapper-2 h2 {
+    letter-spacing: 2px;
+}
+.second-block-wrapper-2 p {
+    text-align: left;
+    font-size: 20px;
+    letter-spacing: 1px;
+    line-height: 25px;
 }
