--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ li:nth-child(3) {
     margin-top: 30px;
     letter-spacing: 1px;
     line-height: 40px;
+    text-align: left;
 }
 .pictures-container {
     width: 90%;
@@ -94,11 +95,9 @@ li:nth-child(3) {
     margin-top: 50px;
 }
 .container-wrapper h4,p {
-    font-size: 13px;
-    margin-top: 15px;
     text-align: center;
-    letter-spacing: 1px;
-    line-height: 25px;
+    font-size: 13px;
+    margin-top: 10px;
 }
 .second-container {
     margin-top: 50px;
@@ -108,16 +107,24 @@ li:nth-child(3) {
 .second-block-wrapper {
     display: flex;
     width: 50%;
-    margin-left: 15%;
+    margin-left: 5%;
     flex-direction: column;
+}
+.second-block-p {
+    font-size: 17px;
+    margin-top: 15px;
+    text-align: left;
+    letter-spacing: 1px;
+    line-height: 25px;
 }
 .second-block-wrapper h3 {
     letter-spacing: 2px;
 }
 .second-block-wrapper p {
     margin-top: 50px;
-    font-size: 17px;
+    font-size: 19px;
     text-align: left;
+    line-height: 30px;
 }
 .blue-block-wrapper {
     width: 100%;
@@ -154,10 +161,10 @@ li:nth-child(3) {
     margin-left: 20px;
 }
 .icon-div img {
-    margin-left: 5px;
-    width: 15px;
-    height: 15px;
-    margin-top: 5px;
+    margin-left: 8px;
+    width: 12px;
+    height: 12px;
+    margin-top: 9px;
 }
 .icon-h6-wrapper h6 {
     margin-top: 40px;
@@ -166,19 +173,78 @@ li:nth-child(3) {
     letter-spacing: 1.4px;
 }
 .second-block-wrapper-2 {
+   margin-top: 100px;
+   display: flex;
+   width: 35%;
+   height: 300px;
+   flex-direction: column;
+   margin-left: 48%;
+}
+.third-container {
+    width: 100%;
+    height: 600px;
+}
+.pictures-container-2 {
+    width: 90%;
+    height: 600px;
+    background-color: #FFFFFF;
     display: flex;
-    width: 35%;
-    height: 300px;
-    margin-top: 100px;
-    flex-direction: column;
-    margin-left: 48%;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-left: 5%;
 }
-.second-block-wrapper-2 h2 {
-    letter-spacing: 2px;
+.fource-container {
+    width: 100%;
+    height: 600px;
+    margin-top: 10%;
 }
-.second-block-wrapper-2 p {
-    text-align: left;
-    font-size: 20px;
+.fource-container h3 {
+    margin-left: 150px;
+    font-size: 14px;
     letter-spacing: 1px;
-    line-height: 25px;
+}
+.providence-block {
+    display: flex;
+    justify-content: space-evenly;
+}
+.providence-foto {
+    width: 18%;
+    height: 350px;
+    margin-top: 5%;
+    background-color: white;
+}
+.providence-foto img {
+    width: 100%;
+    height: 200px;
+}
+.providence-foto h5 {
+    margin-left: 20px;
+    margin-top: 20px;
+    font-size: 13px;
+    letter-spacing: 1px;
+}
+.providence-foto p {
+    text-align: left;
+    margin-left: 20px;
+}
+.providence-foto h6 {
+    margin-left: 20px;
+    color: rgba(0, 0, 0, 0.212);
+}
+.icon-p-wrapper {
+    display: flex;
+}
+.icon-p-wrapper p {
+    font-size: 11px;
+    margin-top: 20px;
+}
+.icon-box {
+    width: 30px;
+    height: 30px;
+    margin-top: 10px;
+    margin-left: 15px;
+}
+.icon-box img {
+    width: 100%;
+    height: 100%;
 }
