--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
 body {
     background-color: #F7F7F7;
 }
+.flex {
+    display: flex;
+}
 header {
     width: 100%;
     height: 70px;
@@ -15,7 +18,6 @@ header {
     z-index: 1;
 }
 nav {
-    display: flex;
     justify-content: space-between;
     padding: 0 50px 0 25px;
     width: 100%;
@@ -25,9 +27,6 @@ nav {
 }
 nav a {
     color: black;
-}
-ul {
-    display: flex;
 }
 ul li {
     padding: 15px;
@@ -47,7 +46,6 @@ li:nth-child(3) {
     margin-top: 10px;
 }
 .text-container {
-    display: flex;
     flex-direction: column;
     width: 100%;
     margin-top: 5%;
@@ -77,7 +75,6 @@ li:nth-child(3) {
     width: 90%;
     height: 600px;
     background-color: #FFFFFF;
-    display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin-left: 5%;
@@ -105,7 +102,6 @@ li:nth-child(3) {
     height: 600px;
 }
 .second-block-wrapper {
-    display: flex;
     width: 50%;
     margin-left: 5%;
     flex-direction: column;
@@ -129,7 +125,6 @@ li:nth-child(3) {
 .blue-block-wrapper {
     width: 100%;
     margin-top: 70px;
-    display: flex;
     justify-content: space-evenly;
 }
 .blue-block {
@@ -148,9 +143,6 @@ li:nth-child(3) {
     color: black;
     margin-left: 20px;
     text-align: left;
-}
-.icon-h6-wrapper {
-    display: flex;
 }
 .icon-div {
     width: 30px;
@@ -174,7 +166,6 @@ li:nth-child(3) {
 }
 .second-block-wrapper-2 {
    margin-top: 100px;
-   display: flex;
    width: 35%;
    height: 300px;
    flex-direction: column;
@@ -188,7 +179,6 @@ li:nth-child(3) {
     width: 90%;
     height: 600px;
     background-color: #FFFFFF;
-    display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin-left: 5%;
@@ -204,7 +194,6 @@ li:nth-child(3) {
     letter-spacing: 1px;
 }
 .providence-block {
-    display: flex;
     justify-content: space-evenly;
 }
 .providence-foto {
@@ -230,9 +219,7 @@ li:nth-child(3) {
 .providence-foto h6 {
     margin-left: 20px;
     color: rgba(0, 0, 0, 0.212);
-}
-.icon-p-wrapper {
-    display: flex;
+    margin-top: 10px;
 }
 .icon-p-wrapper p {
     font-size: 11px;
