--- a/style.css
+++ b/style.css
@@ -144,7 +144,6 @@ li:nth-child(3) {
     margin-left: 20px;
     text-align: left;
 }
-
 .icon-div {
     width: 30px;
     height: 30px;
@@ -239,12 +238,10 @@ li:nth-child(3) {
 .bottom-block {
     width: 100%;
     height: 500px;
-    display: flex;
 }
 .navigation {
    width: 70%;
    height: 100%;
-   display: flex;
    justify-content: space-evenly;
 }
 .navigation ul li {
@@ -276,25 +273,28 @@ li:nth-child(3) {
     font-size: 13px;
     margin-top: 100px;
 }
+.email-wrapper {
+    margin-top: 50px;
+}
 .email-wrapper label {
-    margin-top: 40px;
     margin-left: 40px;
     font-size: 17px;
 }
 .input-wrapper {
-    display: flex;
     margin-top: 10px;
     margin-left: 50px;
     width: 250px;
 }
 .input-wrapper input {
-    width: 200px;
+    width: 83%;
     height: 40px;
 }
 .input-wrapper button {
-    width: 40px;
+    width: 16%;
     height: 40px;
     background-color: #0865DE;
     color: white;
     border: none;
+    border-radius: 2px;
+    font-size: 12px;
 }
