--- a/style.css
+++ b/style.css
@@ -241,11 +241,12 @@ li:nth-child(3) {
 }
 .navigation {
    width: 70%;
-   height: 100%;
+   height: 350px;
    justify-content: space-evenly;
+   background-color: #05193711;
 }
 .navigation ul li {
-    margin-top: 40px;
+    margin-top: 20px;
     border-bottom: none;
     font-size: 13px;
 }
@@ -257,8 +258,8 @@ li:nth-child(3) {
     font-size: 13px;
 }
 .contact {
-    width: 29%;
-    height: 400px;
+    width: 30%;
+    height: 350px;
     background-color: white;
 }
 .contact h4 {
