--- a/style.css
+++ b/style.css
@@ -237,7 +237,31 @@ li:nth-child(3) {
 }
 .bottom-block {
     width: 100%;
-    height: 500px;
+    height: 350px;
+    margin-top: 100px;
+}
+.nos-projets-container {
+    display: flex;
+    width: 150px;
+    height: 50px;
+    background-color:#FF7600;
+    margin-left: 45%;
+    border-radius: 4px;
+    justify-content: center;
+}
+.nos-icon {
+    width: 20px;
+    height: 20px;
+    background-color: #FF7600;
+    border-radius: 50%;
+    border: 4px solid white;
+    margin-top: 15px;
+}
+.nos-pharagraph p {
+    font-size: 12px;
+    color: white;
+    margin-top: 20px;
+    margin-left: 10px;
 }
 .navigation {
    width: 70%;
