--- a/style.css
+++ b/style.css
@@ -323,3 +323,23 @@ li:nth-child(3) {
     border-radius: 2px;
     font-size: 12px;
 }
+footer {
+    width: 100%;
+    height: 100px;
+}
+.logo-text-block {
+    margin-left: 50px;
+}
+.logo-text-block p {
+    font-size: 12px;
+    margin-left: 20px;
+    width: 310px;
+    text-align: left;
+    color: rgba(0, 0, 0, 0.251);
+    margin-top: 30px;
+}
+.footer-wrapper a {
+    margin-left: 70%;
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.263);
+}
