--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ li:nth-child(3) {
     border-radius: 50%;
     margin-left: 100px;
     margin-top: 50px;
+    object-fit: cover;
 }
 .container-wrapper h4,p {
     text-align: center;
